# Booking

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/routers/: user.py  user_routers.py
backend/src/api/schemas/: base.py
backend/src/config/: events.py  manager.py  types.py
backend/src/config/settings/: base.py  development.py  environment.py
backend/src/models/: base.py
backend/src/repository/: base.py  database.py  events.py  user_repository.py
backend/src/utils/: base.py
docker/: Dockerfile.backend  mongo-init.sh  run_server.sh
