[tool.poetry]
name = "booking(fastapi)"
version = "0.1.0"
description = "API for use booking service"
authors = ["Ilya Kibirev <kibirev.i@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
kafka-python = "^2.0.2"
pymongo = "^4.3.3"
motor = "^3.1.1"
mongogrant = "^0.3.3"
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
